--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-import random
-import numpy as np
-import streamlit as st
+streamlit
+numpy
+matplotlib
+torch
+torchvision
+Pillow
+requests
+pandas
+nltk
+PyPDF2
+pillow
